# security-assistant

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  setup.py
.github/: dependabot.yml
config/: scheduled-scans.example.yaml  security-assistant.example.json  security-assistant.example.yaml
docs/: AI_AGENT_CONTINUITY_REPORT.md  CHECKPOINT_SYSTEM_RULES.md  CLEANUP_REPORT.md  CLEANUP_REPORT_SESSION_61.md  DOCUMENTATION_CLEANUP_SESSION_61.md  DOPPLER_QUICK_START.md  DOPPLER_SETUP_COMPLETE.md  EMAIL_INTEGRATION_GUIDE.md  EMAIL_QUICK_START.md  FIXES_APPLIED.md  GITHUB_ISSUES_TO_CREATE.md  IDEAS_FROM_GITLAB_AGENT.md  LAUNCH_CHECKLIST.md  LAUNCH_PLAN.md  MARKETING_PITCHES.md  MCP_CI_FIXES_REPORT.md  MCP_HEALTH_CHECK_REPORT.md  MCP_SETUP_GUIDE.md  MIGRATION_REPORT_SESSION_28.md  PROJECT_RULES.md  README.md  REFACTORING_PLAN_SESSION_47.md  SECURITY_IMPROVEMENTS.md  SECURITY_SCAN_FIX.md  SECURITY_TESTING_GUIDE.md  SESSION_49_50_COMPLETE.md  VERIFICATION_REPORT_SESSIONS_55-59.md  configuration.md  index.md  installation.md  quickstart.md  troubleshooting.md
examples/: checkpoint_system_example.py  cicd_integration.py  config_examples.py  create_issue_example.py  custom_templates_example.py  generate_reports_example.py  orchestrator_example.py  performance_examples.py  quick_scan_example.py  real_scan_example.py  report_comparison_example.py  scan_and_create_issues.py  scan_with_semgrep.py  scan_with_trivy.py  scheduled_scan_example.py  targets.txt  test_create_issue.py  (+6 more)
(+389 files in other folders)
