[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "security-assistant"
version = "0.1.0"
description = "GitLab Security Assistant - Automated vulnerability management"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "urllib3>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "bandit>=1.7.5",
    "pylint>=3.0.0",
    "black>=23.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["security_assistant*"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (require internet)",
]
